2025-01-01  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/exwm-settings.el: Add configuration for EXWM

	* init.el: Configuration for Common Lisp

2024-12-31  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/dotemacs-core.el (after-load-1!, after-load!):
	Optimize the expanded code

	* init.el: Disable doom-modeline-mode for igc branch
	(+indent-tabs-mode--find-file-h): Detect whether indent-tabs-mode
	should be enabled
	(tool-map): Bind C-t a to gptel-menu instead of gptel-send

	* straight/versions/dotemacs.el: Fix bug#75199 by updating corfu

	* site-lisp/vi-modeline.el (vi-modeline-apply): Disable messages

2024-12-30  Zhengyi Fu  <i@fuzy.me>

	* init.el (+custom-faces): Fix overline color of mode-line-active
	(+dynamic-highlight--predicate): New function

	* site-lisp/vi-modeline.el: Use hack-local-variables-hook instead
	of before-hack-local-variables-hook

	* init.el: Fix configuration of buffer-env,
	Fix identation,
	(+custom-faces): Highlight incorrect indentation
	Turn off ws-butler-keep-whitespace-before-point
	Turn on ws-butler-convert-leading-tabs-or-spaces

2024-12-29  Zhengyi Fu  <i@fuzy.me>

	* Fork rime and fix defcustom types

	* Update packages.el

	* site-lisp/dotemacs-core.el (after-load!): Fix handling of empty list

	* init.el: save-file-hook doesn't exist, use after-save-hook instead

2024-12-28  Zhengyi Fu  <i@fuzy.me>

	* init.el (hl-todo): Change the prefix M-g C-t.

2024-12-27  Zhengyi Fu  <i@fuzy.me>

	* init.el: fix the error occurred when configuring diff-hl
	(+eshell/here, +eshell/other-window): Use let and cons instead of cl-letf

	* ChangeLog.1: Imported from Git

	* init.el: optimize loading of diff-hl
	(+eshell/here): Fix for Emacs 31.1
	(+eshell/other-window): Fix for Emacs 31.1

	* straight/versions/dotemacs.el: Update magit

2024-12-26  Zhengyi Fu  <zhengyi@vbox>

	* site-lisp/quick-init.el: Add a simple init file for use with emacs -Q

	* init.el (+custom-fontset): move fontset configuration code to a function